Fixed side spacing in Parking Info Page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,6 @@ body {
 }
 
 .root-container {
-	height: 100vh;
-	width: 100vw;
 	min-height: 100vh;
 }
 
